--- a/exercise 3/marvel-api/package.json
+++ b/exercise 3/marvel-api/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "marvel-api",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 4173"
-  },
-  "dependencies": {
-    "pinia": "^2.0.14",
-    "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9"
-  }
+    "name": "marvel-api",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --port 4173",
+        "prettier": "npx prettier --write ."
+    },
+    "dependencies": {
+        "pinia": "^2.0.14",
+        "vue": "^3.2.36",
+        "vue-router": "^4.0.15"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^2.3.3",
+        "prettier": "2.7.0",
+        "vite": "^2.9.9"
+    }
 }
