--- a/exercise 3/marvel-api/package.json
+++ b/exercise 3/marvel-api/package.json
@@ -5,7 +5,8 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview --port 4173",
-        "prettier": "npx prettier --write ."
+        "prettier": "npx prettier --write .",
+        "prepare": "cd ../.. && husky install"
     },
     "dependencies": {
         "pinia": "^2.0.14",
@@ -14,7 +15,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.0.2",
         "prettier": "2.7.0",
         "vite": "^2.9.9"
+    },
+    "lint-staged": {
+        "*.{vue,js,css,md}": "prettier --write"
     }
 }
